samples/_failures_safe/1761544996_b5ce7c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d0e33722.c: In function ‘main’:
./samples/SAFE/__tmp_d0e33722.c:137:51: error: expected ‘]’ at end of input
  137 |     if (len > 0 && input[len-1] == '\n') input[len
      |                                                   ^
      |                                                   ]
./samples/SAFE/__tmp_d0e33722.c:137:5: error: expected declaration or statement at end of input
  137 |     if (len > 0 && input[len-1] == '\n') input[len
      |     ^~
